# HPC-UNIGE

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  init.sh  sas.txt
Mandelbrot/: Makefile  README.md  init.sh  requirements.txt
Mandelbrot/mandelbrot_lab/: Cargo.toml  MakeFile
Mandelbrot/mandelbrot_lab/src/: build.rs  main.rs  mandelbrot_frame.rs
Mandelbrot/mandelbrot_lab/src/mandelbrot/: clap_arguments.rs  mandelbrot_analysis.rs  mandelbrot_frame.rs  mod.rs
Mandelbrot/mandelbrot_lab/src/mandelbrot/metal/: mandelbrot.metal
Mandelbrot/mandelbrot_lab/src/metal/: mandelbrot.air  mandelbrot.metal  mandelbrot.metallib
Mandelbrot/metalcrab/: Cargo.toml
Mandelbrot/metalcrab/src/metal/: dotprod.air  dotprod.metallib
Mandelbrot/openmp/: mandelbrot.cpp
Mandelbrot/sequential_rs/: Cargo.toml
Mandelbrot/sequential_rs/src/: main.rs  mandelbrot_frame.rs
Mandelbrot/src/cuda/: mandelbrot.cu  mandelbrot_cuComplex.cu
Mandelbrot/src/mpi/: Makefile  mandelbrot.cpp
Mandelbrot/src/openmp/: mandelbrot.cpp
Mandelbrot/src/utils/image/: render.py
Mandelbrot/src/utils/image/rendering/: go.mod
Mandelbrot/src/utils/rendering/: .gitignore
Mandelbrot/utils/metrics/: compute_accuracy.py
src/: build.rs  main.rs
src/mandelbrot/: clap_arguments.rs  mandelbrot_analysis.rs  mandelbrot_frame.rs
src/mandelbrot/cpp/: O1  O2  O3  O3_2000  a.out  mandelbrot_sequential.cpp  sequential0  sequential1  sequential2  sequential3  sequentialfast
src/mandelbrot/metal/: Makefile
src/utils/plot/: plot_speed_up_mpi.py  plot_speed_up_omp.py
(+1 files in other folders)
