[package]
name = "mandelbrot_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
metal = "0.27.0"
num-complex = "0.4.5"
plotters = "0.3.5"
