[package]
name = "mandelbrot_lab"
build = "src/build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
metal = "0.27.0"
num-complex = "0.4.5"
plotters = "0.3.5"
polars = "0.38.1"

# Switch profiles usign `cargo build --profile <profile>` e.g. `cargo build --profile opt-0`

[profile.opt-0]
inherits = "release"
opt-level = 0

[profile.opt-1]
inherits = "release"
opt-level = 1

[profile.opt-2]
inherits = "release"
opt-level = 2

[profile.opt-3]
inherits = "release"
opt-level = 3

[profile.opt-native]
inherits = "release"
opt-level = 3
target-cpu = "native"
